--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -26,11 +26,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="shortcut icon" href="../src/icons/check.png" type="image/x-icon">
-    <title>ToDo Machine</title>
+    <link rel="stylesheet" href="../src/index.css">
+    <title>Task Manager</title>
   </head>
-  <body style="background-color: #F6FFDE;">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div class="main" id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
