saving today's work

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="shortcut icon" href="../src/icons/check.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/4901/4901662.png" type="image/x-icon">
     <link rel="stylesheet" href="../src/index.css">
     <title>Task Manager</title>
   </head>
