--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     -->
     <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/4901/4901662.png" type="image/x-icon">
     <link rel="stylesheet" href="../src/index.css">
-    <title>Task Manager</title>
+    <title>Tasks Manager</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
